--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
     "name": "csharp-colors",
     "displayName": "C# Colors",
-    "description": "",
+    "description": "Highlight C# colors in your editor",
     "version": "0.0.1",
     "publisher": "logerfo",
     "engines": {
-        "vscode": "^1.27.0"
+        "vscode": "^1.10.0"
+    },
+    "bugs": {
+        "url": "https://github.com/Logerfo/csharp-colors/issues",
+        "email": "bruno@logerfo.tk"
+    },
+    "author": {
+        "email": "bruno@logerfo.tk",
+        "name": "Bruno Logerfo",
+        "url": "https://github.com/Logerfo"
+    },
+    "license": "Unlicense",
+    "homepage": "https://github.com/Logerfo/csharp-colors/blob/master/README.md",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Logerfo/csharp-colors.git"
     },
     "categories": [
         "Other"
     ],
     "activationEvents": [
-        "onCommand:extension.sayHello"
+        "*"
     ],
     "main": "./out/extension",
     "contributes": {
         "commands": [
             {
-                "command": "extension.sayHello",
-                "title": "Hello World"
+                "command": "extension.colorHighlight",
+                "title": "Highlight colors in current file"
             }
         ]
     },
@@ -26,14 +41,17 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
+        "typescript": "^3.0.3",
         "vscode": "^1.1.21",
         "tslint": "^5.8.0",
         "@types/node": "^8.10.25",
         "@types/mocha": "^2.2.42"
+    },
+    "dependencies": {
+        "color": "^3.0.0",
+        "color-name": "^1.1.4"
     }
 }
