--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
+        "resolveJsonModule": true,
         "target": "es6",
         "outDir": "out",
         "lib": [
@@ -9,7 +10,7 @@
         "sourceMap": true,
         "rootDir": "src",
         /* Strict Type-Checking Option */
-        "strict": true,   /* enable all strict type-checking options */
+        "strict": false,   /* enable all strict type-checking options */
         /* Additional Checks */
         "noUnusedLocals": true /* Report errors on unused locals. */
         // "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
@@ -17,7 +18,6 @@
         // "noUnusedParameters": true,  /* Report errors on unused parameters. */
     },
     "exclude": [
-        "node_modules",
-        ".vscode-test"
+        "node_modules"
     ]
 }
