changed command from `extension.colorHighlight` to `csharp-colors.colorHighlight`

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "contributes": {
         "commands": [
             {
-                "command": "extension.colorHighlight",
+                "command": "csharp-colors.colorHighlight",
                 "title": "Highlight colors in current file"
             }
         ]
