initial try to make windows colors
Error: A dynamic link library (DLL) initialization routine failed.
https://stackoverflow.com/questions/37396157/hiding-other-windows-programs-from-electron-app
https://github.com/mono/mono/blob/c5b88ec4f323f2bdb7c7d0a595ece28dae66579c/mcs/class/System.Drawing/System.Drawing/gdipFunctions.cs#L1493
https://github.com/mono/mono/blob/c5b88ec4f323f2bdb7c7d0a595ece28dae66579c/mcs/class/System.Drawing/System.Drawing/gdipFunctions.cs#L1493
https://github.com/mono/mono/blob/c5b88ec4f323f2bdb7c7d0a595ece28dae66579c/mcs/class/System.Drawing/System.Drawing/KnownColors.cs#L232
https://github.com/Microsoft/vscode/issues/658

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     },
     "dependencies": {
         "color": "^3.0.0",
-        "color-name": "^1.1.4"
+        "color-name": "^1.1.4",
+        "ffi": "^2.2.0"
     }
 }
