only activating the extension when a .cs file is open instead of when vs code starts up

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "Other"
     ],
     "activationEvents": [
-        "*"
+        "onLanguage:csharp"
     ],
     "main": "./out/extension",
     "contributes": {
