fix vscode launch
https://github.com/microsoft/vscode/issues/76989#issuecomment-514840530

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "runtimeExecutable": "${execPath}",
             "args": [
                 "--extensionDevelopmentPath=${workspaceFolder}",
-                "--disable-extensions"
+                "--disable-extensions=1"
             ],
             "outFiles": [
                 "${workspaceFolder}/out/**/*.js"
