--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     },
     "bugs": {
         "url": "https://github.com/Logerfo/csharp-colors/issues",
-        "email": "bruno@logerfo.tk"
+        "email": "bruno@logerfo.com.br"
     },
     "author": {
-        "email": "bruno@logerfo.tk",
+        "email": "bruno@logerfo.com.br",
         "name": "Bruno Logerfo",
         "url": "https://github.com/Logerfo"
     },
